tests/out/error/struct/required_field.in.bt
type Int := i32 | i64

struct Bar{
	@required attr bool
	sum Int
}

struct Foo {
	func fun ()
}

struct Spam {
	ref &Spam
	ref2 &Foo
}

b := Bar{
	attr = true
}
b2 := Bar{
	sum = 5
}


f := Foo{}

s := Spam{}
